--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "format": "prettier --write \"./**/*.{html,vue,ts,js,json,md}\""
   },
   "dependencies": {
+    "@element-plus/icons-vue": "^2.3.1",
+    "element-plus": "^2.7.5",
+    "pinia": "^2.1.7",
     "vue": "^3.4.21"
   },
   "devDependencies": {
@@ -21,9 +24,11 @@
     "eslint-plugin-prettier": "5.1.3",
     "eslint-plugin-vue": "9.23.0",
     "prettier": "3.2.5",
+    "sass": "^1.77.5",
     "typescript": "^5.2.2",
     "vite": "^5.2.0",
     "vite-plugin-eslint": "1.8.1",
+    "vite-plugin-svg-icons": "^2.0.1",
     "vue-tsc": "^2.0.6"
   }
 }
