--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
     "fabric": "^5.3.0",
     "lodash-es": "^4.17.21",
     "pinia": "^2.1.7",
+    "uuid": "^10.0.0",
     "vue": "^3.4.21"
   },
   "devDependencies": {
     "@types/fabric": "^5.3.7",
     "@types/lodash-es": "^4.17.12",
+    "@types/uuid": "^10.0.0",
     "@typescript-eslint/eslint-plugin": "7.3.1",
     "@typescript-eslint/parser": "7.3.1",
     "@vitejs/plugin-vue": "^5.0.4",
