--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@element-plus/icons-vue": "^2.3.1",
+    "@vueuse/core": "^10.11.0",
     "element-plus": "^2.7.5",
     "events": "^3.3.0",
     "fabric": "^5.3.0",
