--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
     "prettier": "3.2.5",
     "sass": "^1.77.5",
     "typescript": "^5.2.2",
+    "unplugin-auto-import": "^0.18.0",
+    "unplugin-vue-components": "^0.27.2",
     "vite": "^5.2.0",
     "vite-plugin-eslint": "1.8.1",
     "vite-plugin-svg-icons": "^2.0.1",
