--- a/package.json
+++ b/package.json
@@ -28,12 +28,15 @@
     "@typescript-eslint/eslint-plugin": "7.3.1",
     "@typescript-eslint/parser": "7.3.1",
     "@vitejs/plugin-vue": "^5.0.4",
+    "autoprefixer": "^10.4.19",
     "eslint": "8.57.0",
     "eslint-config-prettier": "9.1.0",
     "eslint-plugin-prettier": "5.1.3",
     "eslint-plugin-vue": "9.23.0",
+    "postcss": "^8.4.39",
     "prettier": "3.2.5",
     "sass": "^1.77.5",
+    "tailwindcss": "^3.4.5",
     "typescript": "^5.2.2",
     "unplugin-auto-import": "^0.18.0",
     "unplugin-vue-components": "^0.27.2",
